lab1/Test/L1-A-11-87.cmm
struct hnHS9QEH {
  struct PxhWDHSW2ZM MpIMI_p864pvkfyXS || ;
  int dSrzq2fNNOi7 struct ;
  int MHZB36GxSzhHE , ;
  float bqEjqczJReql [ 600320825 ] = Gxj5csmQmr = 
    P7z5MR0S9Ah2X80 != WLrI + Kf7u1Y7kUXk4RWZ9iy / Y096v 
    [ RlRGMYnKS1oFfr_9jgXQ = t0G0kTS6tCbOucbaP || s2Qy1NAx8fMfL6diLD2 
    && ynnZQyqO3 == y - Gc9t63rtRv / DiD ( o6_TNTFaPTLReu9Cxwop 
    , RZxf7WlJ2rOeUo5UYz = hDTZkjkW - cQ14WAV ( BSIWWvIzVLUc9dWdCJ2N 
    , QSYX , lLVlEQ , imB || Z7m1nXkbuzc9c3L66F < V - 
    ( n || n_Dm <= Ah5_bIx78X2E6LenrMB + zOhFPJpx28zI68ft7d 
    * ( vfvQCO4C || JP > VM_9VEXpzYS09E ) - zBY + 994304215.345566184 
    . flKkjC9cD . ) ) ) * 130279146 >= - ! K ( ) . IuUk70oHmMPC 
    ] ;
}OLueG0ksTgDj95lo ( ) {
}
int ;
int ;
int d ( {
  if ( _RKlsU9J )   if ( D7xtlnPzRwzJNVk )   while 
    ( bseGg )   A9dyijrhO5fyaQdb ;= 

else   if ( CZGgnwqtcxAMpjQJ ) {
  }


}
int kHYnfSs_chcoX ( ) {
}
int VAhs ( int MneaZBWVUxYdQEi7 , int EHS_ALEUjPVHalAkfw5s 
  ) {
  if yh )   P0e3HTkOxHLx9jihu5 ;
else   return WqKQC2q ;

}
struct {
  int YwWmF5D6dD ;
  struct {
    int ZwNW ;
    int aBRcFUFoPuCDmQOIe ;
    struct {
      struct rxNur3kV757K1 vylpmp ;
      struct 353472269.318734305 mNRTcPL0c h ;
      struct _QHGZM9HwxskKTFgO e6j9_zcrSVxGAdsMy ;
<     }WW5 ;
  }HdsKbQ ;
  struct qfvRVqHGMj ccili6AoFJQJ1U ;
}QkgposyKQFArv 
;
int ;
struct JMP UWjUEAboO5B7_6T , PVWU4lzr7_Aj 

;
